--- a/Info.plist
+++ b/Info.plist
@@ -5,7 +5,7 @@
 	<key>Author</key>
 	<string>Aaron Reisman</string>
 	<key>Builder Version</key>
-	<string>8536.26.14</string>
+	<string>9537.73.11</string>
 	<key>CFBundleDisplayName</key>
 	<string>Scout</string>
 	<key>CFBundleIdentifier</key>
@@ -13,22 +13,24 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.1.3</string>
+	<string>1.1.5</string>
 	<key>CFBundleVersion</key>
-	<string>1.1.3</string>
+	<string>1.1.5</string>
 	<key>Chrome</key>
 	<dict>
 		<key>Global Page</key>
-		<string>app.html</string>
+		<string>backgrounds/safari.html</string>
 		<key>Toolbar Items</key>
 		<array>
 			<dict>
 				<key>Command</key>
-				<string>initialize</string>
+				<string>onClicked</string>
 				<key>Identifier</key>
-				<string>scoutButton</string>
+				<string>browserAction</string>
 				<key>Image</key>
-				<string>icon-16.png</string>
+				<string>images/icon-16.png</string>
+				<key>Include By Default</key>
+				<true/>
 				<key>Label</key>
 				<string>Scout</string>
 				<key>Palette Label</key>
@@ -44,13 +46,17 @@
 		<dict>
 			<key>End</key>
 			<array>
-				<string>jquery-1.8.2.min.js</string>
-				<string>app.js</string>
+				<string>javascripts/app.js</string>
+				<string>javascripts/safari.js</string>
+			</array>
+			<key>Start</key>
+			<array>
+				<string>javascripts/jquery.js</string>
 			</array>
 		</dict>
 		<key>Stylesheets</key>
 		<array>
-			<string>app.css</string>
+			<string>stylesheets/app.css</string>
 		</array>
 	</dict>
 	<key>Description</key>
@@ -68,7 +74,7 @@
 		</dict>
 	</dict>
 	<key>Update Manifest URL</key>
-	<string>http://lifeiscontent.net/update.plist</string>
+	<string>https://raw.github.com/lifeiscontent/Scout/master/Update.plist</string>
 	<key>Website</key>
 	<string>http://lifeiscontent.net</string>
 </dict>
