--- a/bin/build
+++ b/bin/build
@@ -1,3 +1,3 @@
 #!/bin/bash
 
-babel --presets=react javascripts/app.react.js -o javascripts/app.react.min.js
+babel --presets=es2015,react,stage-2 javascripts/app.react.js -o javascripts/app.react.min.js
