--- a/Update.plist
+++ b/Update.plist
@@ -14,7 +14,7 @@
                 <key>CFBundleShortVersionString</key>
                 <string>2.0.0</string>
                 <key>URL</key>
-                <string>https://github.com/lifeiscontent/Scout/releases/download/2.0.0/scout-safari.safariextz</string>
+                <string>https://github.com/lifeiscontent/Scout/releases/download/2.0.0/Scout.safariextz</string>
             </dict>
         </array>
     </dict>
